--- a/.gitmodules
+++ b/.gitmodules
@@ -3,19 +3,14 @@
 	url = https://github.com/grantmcdermott/universe
 	shallow = true
 	branch = HEAD
+[submodule "etwfe"]
+	path = etwfe
+	url = https://github.com/grantmcdermott/etwfe
+	shallow = true
+	registered = true
 [submodule "ggiplot"]
 	path = ggiplot
 	url = https://github.com/grantmcdermott/ggiplot
-	shallow = true
-	registered = true
-[submodule "lecturenotes"]
-	path = lecturenotes
-	url = https://github.com/grantmcdermott/lecturenotes
-	shallow = true
-	registered = true
-[submodule "lfe2fixest"]
-	path = lfe2fixest
-	url = https://github.com/grantmcdermott/lfe2fixest
 	shallow = true
 	registered = true
 [submodule "parttree"]
@@ -26,6 +21,16 @@
 [submodule "ritest"]
 	path = ritest
 	url = https://github.com/grantmcdermott/ritest
+	shallow = true
+	registered = true
+[submodule "lecturenotes"]
+	path = lecturenotes
+	url = https://github.com/grantmcdermott/lecturenotes
+	shallow = true
+	registered = true
+[submodule "lfe2fixest"]
+	path = lfe2fixest
+	url = https://github.com/grantmcdermott/lfe2fixest
 	shallow = true
 	registered = true
 [submodule "tinytest"]
