--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,11 @@
 	url = https://github.com/grantmcdermott/ggiplot
 	shallow = true
 	registered = true
+[submodule "tinysnapshot"]
+	path = tinysnapshot
+	url = https://github.com/vincentarelbundock/tinysnapshot
+	shallow = true
+	registered = true
 [submodule "parttree"]
 	path = parttree
 	url = https://github.com/grantmcdermott/parttree
