--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,10 @@
 [submodule "etwfe"]
 	path = etwfe
 	url = https://github.com/grantmcdermott/etwfe
+[submodule "fixest"]
+	path = fixest
+	url = https://github.com/lrberge/fixest
+	registered = false
 [submodule "ggiplot"]
 	path = ggiplot
 	url = https://github.com/grantmcdermott/ggiplot
