--- a/.gitmodules
+++ b/.gitmodules
@@ -12,6 +12,10 @@
 [submodule "ggfixest"]
 	path = ggfixest
 	url = https://github.com/grantmcdermott/ggfixest
+[submodule "ggplot2"]
+	path = ggplot2
+	url = https://github.com/tidyverse/ggplot2
+	registered = false
 [submodule "lecturenotes"]
 	path = lecturenotes
 	url = https://github.com/grantmcdermott/lecturenotes
