--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,9 @@
 	path = .registry
 	url = https://github.com/grantmcdermott/grantmcdermott.r-universe.dev
 	branch = HEAD
+[submodule "duckreg"]
+	path = duckreg
+	url = https://github.com/grantmcdermott/duckreg
 [submodule "etwfe"]
 	path = etwfe
 	url = https://github.com/grantmcdermott/etwfe
